test/assets/invalid/expect-list.hs
import Data.Char (isSpace)
-- Expected an item, got a list

a :: [Int]
a = 1
